# Rehost-LiteOS-m

./: .gdb_history  Makefile  liteos  log.txt  ohos_config.json
key_components/communication_netmanager_base/: .clang-format  .gitignore  README.md  README_zh.md  bundle.json  hisysevent.yaml  netmanager_base_config.gni
key_components/communication_netmanager_base/bpf/bpf_loader/: bpf_loader.h
key_components/communication_netmanager_base/bpf/bpf_progs/: 464xlat.c  net_permission.c  netstats.c  offload.c
key_components/communication_netmanager_base/bpf/bpf_reader/: bpf_reader.h
key_components/communication_netmanager_base/bpf/bpf_syscall_wrapper/: bpf_syscall_wrapper.h
key_components/communication_netmanager_base/frameworks/native/netmanagernative/: dhcp_result_parcel.cpp  netsys_addr_info_parcel.cpp  netsys_native_service_proxy.cpp  netsys_native_service_proxy.h  notify_callback_proxy.cpp  notify_callback_proxy.h
key_components/communication_netmanager_base/interfaces/innerkits/include/: inet_addr.h  net_manager_constants.h
key_components/communication_netmanager_base/interfaces/innerkits/netconnclient/: BUILD.gn
key_components/communication_netmanager_base/interfaces/innerkits/netpolicyclient/: BUILD.gn
key_components/communication_netmanager_base/interfaces/innerkits/netstatsclient/: BUILD.gn
key_components/communication_netmanager_base/interfaces/kits/js/: @ohos.net.connection.d.ts  @ohos.net.policy.d.ts  @ohos.net.statistics.d.ts  @system.network.d.ts
key_components/communication_netmanager_base/sa_profile/: 1151.xml  1152.xml  1153.xml  1154.xml  1156.xml  1157.xml  1158.xml  BUILD.gn
key_components/communication_netmanager_base/services/common/: BUILD.gn
key_components/communication_netmanager_base/services/common/include/: broadcast_manager.h  dns_base_service.h  net_conn_base_service.h  net_ethernet_base_service.h  net_manager_center.h  net_policy_base_service.h  net_settings.h  net_stats_base_service.h  route_utils.h  timer.h
key_components/communication_netmanager_base/services/common/src/: broadcast_manager.cpp  net_manager_center.cpp  net_settings.cpp  route_utils.cpp
key_components/communication_netmanager_base/services/etc/init/: BUILD.gn  netdetectionurl.conf  netmanager_base.cfg  netmanager_base.rc  netsysnative.cfg  netsysnative.rc
key_components/communication_netmanager_base/services/etc/param/: BUILD.gn  netmanager_base.para  netmanager_base.para.dac
key_components/communication_netmanager_base/services/net_adj_manager/include/: net_adj_iface_info.h  net_adj_info.h  net_adj_service.h
key_components/communication_netmanager_base/services/net_adj_manager/src/: net_adj_service.cpp
key_components/communication_netmanager_base/services/net_qos/include/: net_qos_info.h  net_qos_monitor.h
key_components/communication_netmanager_base/services/net_qos/src/: net_qos_info.cpp  net_qos_monitor.cpp
key_components/communication_netmanager_base/services/netconnmanager/: BUILD.gn
key_components/communication_netmanager_base/services/netconnmanager/include/: i_net_monitor_callback.h  net_activate.h  net_caps.h  net_conn_event_handler.h  net_conn_service.h  net_conn_service_iface.h  net_conn_types.h  net_http_proxy_tracker.h  net_monitor.h  net_score.h  net_supplier.h  network.h
key_components/communication_netmanager_base/services/netconnmanager/src/: net_activate.cpp  net_caps.cpp  net_conn_event_handler.cpp  net_conn_service.cpp  net_conn_service_iface.cpp  net_http_proxy_tracker.cpp  net_monitor.cpp  net_score.cpp  net_supplier.cpp  network.cpp
key_components/communication_netmanager_base/services/netmanagernative/: BUILD.gn
key_components/communication_netmanager_base/services/netmanagernative/fwmarkclient/: BUILD.gn
key_components/communication_netmanager_base/services/netmanagernative/include/: netsys_native_service.h  netsys_native_service_stub.h
key_components/communication_netmanager_base/services/netmanagernative/netsys_client/: BUILD.gn  CMakeLists.txt
key_components/communication_netmanager_base/services/netmanagernative/src/: dhcp_controller.cpp  netsys_native_service.cpp  netsys_native_service_stub.cpp  notify_callback_stub.cpp
key_components/communication_netmanager_base/services/netpolicymanager/: BUILD.gn
key_components/communication_netmanager_base/services/netpolicymanager/include/: device_idle_firewall_rule.h  firewall_rule.h  net_policy_base.h  net_policy_callback.h  net_policy_core.h  net_policy_event_handler.h  net_policy_file.h  net_policy_firewall.h  net_policy_inner_define.h  net_policy_rule.h  net_policy_service.h  net_policy_service_common.h  net_policy_traffic.h  netsys_policy_wrapper.h
key_components/communication_netmanager_base/services/netpolicymanager/src/: net_policy_service.cpp
key_components/communication_netmanager_base/services/netstatsmanager/: BUILD.gn
key_components/communication_netmanager_base/services/netsys_bpf_stats/: BUILD.gn
key_components/communication_netmanager_base/services/netsyscontroller/: BUILD.gn
key_components/communication_netmanager_base/utils/: BUILD.gn  CMakeLists.txt
key_components/communication_netmanager_base/utils/napi_utils/: BUILD.gn
key_components/communication_netmanager_ext/: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  netmanager_ext_config.gni
key_components/communication_netmanager_ext/sa_profile/: 1155.xml  1161.xml  BUILD.gn
key_components/communication_netmanager_ext/services/ethernetmanager/: BUILD.gn
key_components/communication_netmanager_ext/services/mdnsmanager/: BUILD.gn
key_components/communication_netmanager_ext/services/networksharemanager/: BUILD.gn  network_share_config.cfg
key_components/communication_netmanager_ext/utils/: BUILD.gn
key_components/communication_netstack/: .gitignore  READEME.md  README_zh.md  bundle.json  netstack_config.gni
key_components/communication_netstack/utils/: BUILD.gn
key_components/communication_netstack/utils/napi_utils/: BUILD.gn
key_components/sensors_sensor_lite/frameworks/src/: BUILD.gn  sensor_agent_proxy.c
(+760 files in other folders)
