# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# args of this module
SUBSYSTEM_DIR = "//foundation/communication"
NETSTACK_DIR = "$SUBSYSTEM_DIR/netstack"
NETSTACK_NATIVE_ROOT = "$NETSTACK_DIR/frameworks/native"
NETSTACK_INNERKITS_DIR = "$NETSTACK_DIR/interfaces/innerkits"

# args of other module
ARKUI_ROOT = "//foundation/arkui"
THIRD_PARTY_ROOT = "//third_party"
HILOG_ROOT = "//base/hiviewdfx/hilog"
HILOG_LITE_ROOT = "//base/hiviewdfx/hilog_lite"
NETMANAGER_BASE_ROOT = "$SUBSYSTEM_DIR/netmanager_base"
