# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos/sa_profile/sa_profile.gni")

ohos_sa_profile("net_manager_profile") {
  sources = [
    "1151.xml",
    "1152.xml",
    "1153.xml",
    "1154.xml",
    "1155.xml",
    "1156.xml",
    "1157.xml",
    "1158.xml",
  ]

  part_name = "netmanager_base"
}
