# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_shared_library("net_service_common") {
  sources = [
    "src/broadcast_manager.cpp",
    "src/net_manager_center.cpp",
    "src/net_settings.cpp",
    "src/route_utils.cpp",
  ]

  include_dirs = [
    "include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netmanagernative/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$SUBSYSTEM_DIR/ipc/interfaces/innerkits/ipc_core/include",
    "$NETSYSNATIVE_SOURCE_DIR/include/netsys",
  ]

  deps = [
    "$INNERKITS_ROOT/netconnclient:net_conn_parcel",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
  ]

  defines = [
    "NETMGR_LOG_TAG = \"NetConnManager\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
