# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

ohos_shared_library("net_stats_manager") {
  sources = [
    "src/common/net_stats_service_common.cpp",
    "src/net_stats_cached.cpp",
    "src/net_stats_callback.cpp",
    "src/net_stats_data_handler.cpp",
    "src/net_stats_database_helper.cpp",
    "src/net_stats_history.cpp",
    "src/net_stats_listener.cpp",
    "src/net_stats_service.cpp",
    "src/net_stats_sqlite_statement.cpp",
    "src/net_stats_wrapper.cpp",
    "src/stub/net_stats_callback_proxy.cpp",
    "src/stub/net_stats_service_stub.cpp",
  ]

  include_dirs = [
    "$INNERKITS_ROOT/include",
    "$INNERKITS_ROOT/netconnclient/include",
    "$INNERKITS_ROOT/netmanagernative/include",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$INNERKITS_ROOT/netstatsclient/include/proxy",
    "$NETCONNMANAGER_COMMON_DIR/include",
    "$NETMANAGER_BASE_ROOT/utils/log/include",
    "include",
    "include/stub",
    "include/common",
    "$NETSYSBPFMAP_SOURCE_DIR/include",
    "$NETSYSCONTROLLER_ROOT_DIR/include",
    "$NETSTATSMANAGER_BPFLIB_DIR/include",
    "$SAMGR_MANAGER_ROOT/interfaces/innerkits/samgr_proxy/include",
    "$NETMANAGER_BASE_ROOT/utils/common_utils/include",
    "$NETSYSNATIVE_SOURCE_DIR/include/netsys",
  ]

  deps = [
    "$HILOG_ROOT/interfaces/native/innerkits:libhilog",
    "$INNERKITS_ROOT/netstatsclient:net_stats_parcel",
    "$NETCONNMANAGER_COMMON_DIR:net_service_common",
    "$NETMANAGER_BASE_ROOT/utils:net_manager_common",
    "$NETSTATSMANAGER_BPFLIB_DIR:netsys_bpf_stats",
    "$NETSYSCONTROLLER_ROOT_DIR:netsys_controller",
    "$THIRD_PARTY_ROOT/sqlite:sqlite",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "hitrace_native:hitrace_meter",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "USE_SQLITE_SYMBOLS",
    "NETMGR_LOG_TAG = \"NetStatsClient\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  if (enable_netmgr_debug) {
    defines += [ "NETMGR_DEBUG" ]
  }

  if (is_standard_system) {
    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps += [ "hilog:libhilog" ]
  }

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
