# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/communication/netmanager_base/netmanager_base_config.gni")

config("bpf_public_config") {
  include_dirs = [
    "$INNERKITS_ROOT/include",
    "$NETSYSBPFMAP_SOURCE_DIR/include",
    "$NETMANAGER_BASE_ROOT/interfaces/innerkits/netmanagernative/include/",
    "$INNERKITS_ROOT/netstatsclient/include",
    "$INNERKITS_ROOT/include",
  ]
}

config("bpf_config") {
  include_dirs = [
    "include",
    "$C_UTILS_ROOT/base/include",
  ]
}

ohos_shared_library("netsys_bpf_stats") {
  configs = [ ":bpf_config" ]
  public_configs = [ ":bpf_public_config" ]
  sources = [ "src/netsys_bpf_stats.cpp" ]

  public_deps = [ "$C_UTILS_ROOT/base:utils" ]

  if (is_standard_system) {
    external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
  } else {
    external_deps = [ "hilog:libhilog" ]
  }

  defines = [
    "NETMGRNATIVE_LOG_TAG = \"NetsysBpfStats\"",
    "LOG_DOMAIN = 0xD0015B0",
  ]

  part_name = "netmanager_base"
  subsystem_name = "communication"
}
